src/com/juliar/parser/JuliarParser.java
// Generated from src\com\juliar\parser\Juliar.g4 by ANTLR 4.7
package com.juliar.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JuliarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, Break=61, Do=62, Instanceof=63, Typeof=64, Case=65, Else=66, 
		New=67, Var=68, Catch=69, Finally=70, Return=71, Void=72, Continue=73, 
		For=74, Switch=75, While=76, Debugger=77, Function=78, This=79, With=80, 
		Default=81, If=82, Throw=83, Delete=84, In=85, Try=86, DecimalLiteral=87, 
		NULL=88, BOOLEAN=89, INT=90, FLOAT=91, DOUBLE=92, LONG=93, ESC_CHARS=94, 
		STRING=95, ID=96, WS=97, COMMENT=98, LINE_COMMENT=99, StringLiteral=100, 
		LineTerminator=101;
	public static final int
		RULE_compileUnit = 0, RULE_classifications = 1, RULE_statement = 2, RULE_endLine = 3, 
		RULE_semiColon = 4, RULE_expression = 5, RULE_functionCall = 6, RULE_functionDeclaration = 7, 
		RULE_funcName = 8, RULE_returnValue = 9, RULE_leftParen = 10, RULE_rightParen = 11, 
		RULE_booleanExpression = 12, RULE_primitives = 13, RULE_command = 14, 
		RULE_userDefinedTypeDecl = 15, RULE_userDefinedTypeKeyWord = 16, RULE_userDefinedTypeName = 17, 
		RULE_variable = 18, RULE_variableDeclaration = 19, RULE_userDefinedTypeVariableDecl = 20, 
		RULE_userDefinedTypeVariableReference = 21, RULE_userDefinedTypeFunctionReference = 22, 
		RULE_add = 23, RULE_summation = 24, RULE_subtract = 25, RULE_subtraction = 26, 
		RULE_multiply = 27, RULE_multiplication = 28, RULE_breakKeyWord = 29, 
		RULE_divide = 30, RULE_division = 31, RULE_modulo = 32, RULE_moduli = 33, 
		RULE_types = 34, RULE_primitiveTypes = 35, RULE_numericTypes = 36, RULE_equalsign = 37, 
		RULE_comparisonOperator = 38, RULE_bitWiseOperators = 39, RULE_equalequal = 40, 
		RULE_lessthan = 41, RULE_greaterthan = 42, RULE_lessthanorequalto = 43, 
		RULE_greaterthanorequalto = 44, RULE_booleanAndOperator = 45, RULE_booleanOrOperator = 46, 
		RULE_notOperator = 47, RULE_bitAnd = 48, RULE_bitOr = 49, RULE_bitXor = 50, 
		RULE_bitNot = 51, RULE_bitLeftShift = 52, RULE_bitRigthShift = 53, RULE_keywords = 54, 
		RULE_ifExpr = 55, RULE_whileExpression = 56, RULE_doWhileExpr = 57, RULE_userDefinedTypeResolutionOperator = 58, 
		RULE_expressionSequence = 59, RULE_identifierName = 60, RULE_singleExpression = 61, 
		RULE_assignmentExpression = 62, RULE_reassignmentExpression = 63, RULE_assignmentOperator = 64, 
		RULE_literal = 65;
	public static final String[] ruleNames = {
		"compileUnit", "classifications", "statement", "endLine", "semiColon", 
		"expression", "functionCall", "functionDeclaration", "funcName", "returnValue", 
		"leftParen", "rightParen", "booleanExpression", "primitives", "command", 
		"userDefinedTypeDecl", "userDefinedTypeKeyWord", "userDefinedTypeName", 
		"variable", "variableDeclaration", "userDefinedTypeVariableDecl", "userDefinedTypeVariableReference", 
		"userDefinedTypeFunctionReference", "add", "summation", "subtract", "subtraction", 
		"multiply", "multiplication", "breakKeyWord", "divide", "division", "modulo", 
		"moduli", "types", "primitiveTypes", "numericTypes", "equalsign", "comparisonOperator", 
		"bitWiseOperators", "equalequal", "lessthan", "greaterthan", "lessthanorequalto", 
		"greaterthanorequalto", "booleanAndOperator", "booleanOrOperator", "notOperator", 
		"bitAnd", "bitOr", "bitXor", "bitNot", "bitLeftShift", "bitRigthShift", 
		"keywords", "ifExpr", "whileExpression", "doWhileExpr", "userDefinedTypeResolutionOperator", 
		"expressionSequence", "identifierName", "singleExpression", "assignmentExpression", 
		"reassignmentExpression", "assignmentOperator", "literal"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'()'", "','", "'{'", "'}'", "'('", "')'", "'sysExec'", "'class'", 
		"'+'", "'add'", "'-'", "'subtract'", "'*'", "'multiply'", "'/'", "'divide'", 
		"'%'", "'modulo'", "'='", "'=='", "'<'", "'>'", "'<='", "'>='", "'&&'", 
		"'||'", "'!'", "'&'", "'|'", "'^'", "'~'", "'<<'", "'>>'", "'int'", "'float'", 
		"'double'", "'long'", "'object'", "'boolean'", "'string'", "'::'", "'['", 
		"']'", "'.'", "'++'", "'--'", "'?'", "':'", "'*='", "'/='", "'%='", "'+='", 
		"'-='", "'<<='", "'>>='", "'>>>='", "'&='", "'^='", "'|='", "'break'", 
		"'do'", "'instanceof'", "'typeof'", "'case'", "'else'", "'new'", "'var'", 
		"'catch'", "'finally'", "'return'", "'void'", "'continue'", "'for'", "'switch'", 
		"'while'", "'debugger'", "'function'", "'this'", "'with'", "'default'", 
		"'if'", "'throw'", "'delete'", "'in'", "'try'", null, "'null'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "Break", "Do", "Instanceof", "Typeof", "Case", "Else", "New", "Var", 
		"Catch", "Finally", "Return", "Void", "Continue", "For", "Switch", "While", 
		"Debugger", "Function", "This", "With", "Default", "If", "Throw", "Delete", 
		"In", "Try", "DecimalLiteral", "NULL", "BOOLEAN", "INT", "FLOAT", "DOUBLE", 
		"LONG", "ESC_CHARS", "STRING", "ID", "WS", "COMMENT", "LINE_COMMENT", 
		"StringLiteral", "LineTerminator"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Juliar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JuliarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CompileUnitContext extends ParserRuleContext {
		public List<ClassificationsContext> classifications() {
			return getRuleContexts(ClassificationsContext.class);
		}
		public ClassificationsContext classifications(int i) {
			return getRuleContext(ClassificationsContext.class,i);
		}
		public CompileUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compileUnit; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JuliarVisitor ) return ((JuliarVisitor<? extends T>)visitor).visitCompileUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompileUnitContext compileUnit() throws RecognitionException {
		CompileUnitContext _localctx = new CompileUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compileUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8 || _la==Function) {
				{
				{
				setState(132);
				classifications();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassificationsContext extends ParserRuleContext {
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public UserDefinedTypeDeclContext userDefinedTypeDecl() {
			return getRuleContext(UserDefinedTypeDeclContext.class,0);
		}
		public ClassificationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classifications; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JuliarVisitor ) return ((JuliarVisitor<? extends T>)visitor).visitClassifications(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassificationsContext classifications() throws RecognitionException {
		ClassificationsContext _localctx = new ClassificationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classifications);
		try {
			setState(140);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Function:
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				functionDeclaration();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				userDefinedTypeDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JuliarVisitor ) return ((JuliarVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(142);
			expression();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndLineContext extends ParserRuleContext {
		public SemiColonContext semiColon() {
			return getRuleContext(SemiColonContext.class,0);
		}
		public EndLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endLine; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JuliarVisitor ) return ((JuliarVisitor<? extends T>)visitor).visitEndLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EndLineContext endLine() throws RecognitionException {
		EndLineContext _localctx = new EndLineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_endLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			semiColon();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SemiColonContext extends ParserRuleContext {
		public SemiColonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_semiColon; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JuliarVisitor ) return ((JuliarVisitor<? extends T>)visitor).visitSemiColon(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SemiColonContext semiColon() throws RecognitionException {
		SemiColonContext _localctx = new SemiColonContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_semiColon);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public SingleExpressionContext singleExpression() {
			return getRuleContext(SingleExpressionContext.class,0);
		}
		public EndLineContext endLine() {
			return getRuleContext(EndLineContext.class,0);
		}
		public IfExprContext ifExpr() {
			return getRuleContext(IfExprContext.class,0);
		}
		public WhileExpressionContext whileExpression() {
			return getRuleContext(WhileExpressionContext.class,0);
		}
		public DoWhileExprContext doWhileExpr() {
			return getRuleContext(DoWhileExprContext.class,0);
		}
		public PrimitivesContext primitives() {
			return getRuleContext(PrimitivesContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public UserDefinedTypeFunctionReferenceContext userDefinedTypeFunctionReference() {
			return getRuleContext(UserDefinedTypeFunctionReferenceContext.class,0);
		}
		public UserDefinedTypeVariableReferenceContext userDefinedTypeVariableReference() {
			return getRuleContext(UserDefinedTypeVariableReferenceContext.class,0);
		}
		public ReturnValueContext returnValue() {
			return getRuleContext(ReturnValueContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JuliarVisitor ) return ((JuliarVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expression);
		try {
			setState(169);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				singleExpression(0);
				setState(149);
				endLine();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(151);
				ifExpr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(152);
				whileExpression();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(153);
				doWhileExpr();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(154);
				primitives();
				setState(155);
				endLine();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(157);
				functionCall();
				setState(158);
				endLine();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(160);
				userDefinedTypeFunctionReference();
				setState(161);
				endLine();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(163);
				userDefinedTypeVariableReference();
				setState(164);
				endLine();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(166);
				returnValue();
				setState(167);
				endLine();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionCallContext extends ParserRuleContext {
		public FuncNameContext funcName() {
			return getRuleContext(FuncNameContext.class,0);
		}
		public LeftParenContext leftParen() {
			return getRuleContext(LeftParenContext.class,0);
		}
		public RightParenContext rightParen() {
			return getRuleContext(RightParenContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(JuliarParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(JuliarParser.WS, i);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public TerminalNode STRING() { return getToken(JuliarParser.STRING, 0); }
		public FunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCall; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JuliarVisitor ) return ((JuliarVisitor<? extends T>)visitor).visitFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionCallContext functionCall() throws RecognitionException {
		FunctionCallContext _localctx = new FunctionCallContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionCall);
		int _la;
		try {
			setState(198);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(171);
				funcName();
				setState(172);
				match(T__1);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(174);
				funcName();
				{
				setState(175);
				leftParen();
				}
				setState(179);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(176);
					match(WS);
					}
					}
					setState(181);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				{
				setState(182);
				rightParen();
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(184);
				funcName();
				{
				setState(185);
				leftParen();
				}
				setState(186);
				variable();
				setState(189);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(187);
					match(T__2);
					setState(188);
					variable();
					}
				}

				{
				setState(191);
				rightParen();
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(193);
				funcName();
				{
				setState(194);
				leftParen();
				}
				setState(195);
				match(STRING);
				{
				setState(196);
				rightParen();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
